# py-sema

./: .coderabbit.yaml  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  results.csv  results.html  results.yml  tdd_rdf_ogm.py  tdd_roc.py
.github/: trigger_kgap_container_build.yml
.github/workflows/: coderabbit-check.yml  deploy-docs.yml  make-lint-test.yml  pr_validation.yml  trigger_kgap_container_build.yml
_build/logs/: myst.build.json
docs/: cli-reference.md  getting-started.md  index.md  myst.yml  sheXer_integration_analysis.md  sheXer_technical_appendix.md
docs/examples/: bench-orchestration-readme.md  discovery-readme.md  harvest-readme.md  index.md  query-readme.md  ro-readme.md  subyt-readme.md
docs/modules/: bench.md  commons.md  discovery.md  harvest.md  query.md  ro.md  subyt.md  syncfs.md
docs/user-guide/: index.md  query-workflow.md
examples/: README.md  bench_orchestration.py  discovery_example.py  harvest_example.py  rocrate_example.py  simple_query.py  subyt_templating.py  syncfs_example.py  validation_example.py
examples/harvest/: logging.yml
examples/ro/: README.md
sema/: __init__.py
sema/bench/: README.md  __init__.py  __main__.py  core.py  dispatcher.py  handler.py
sema/check/: README.md  __init__.py  __main__.py  base.py  check.py  service.py
sema/commons/: __init__.py
sema/discovery/: README.md  __init__.py  __main__.py  discovery.py  linkheaders.py  lod_html_parser.py  url_to_graph.py
sema/harvest/: README.md  __init__.py  __main__.py  config_build.py  execution_report.py  executor.py  helper.py  path_assertion.py  service.py  store.py  url_to_graph.py
sema/query/: README.md  __init__.py  __main__.py  copytpl.py  interface.py  query.py
sema/ro/: README.md
sema/rocreator/: rocreator.yml
sema/shacl/: __init__.py  __main__.py  shaclery.py
sema/subyt/: README.md  __init__.py  __main__.py  api.py  sinks.py  sources.py  subyt.py
sema/syncfs/: README.md  __init__.py  __main__.py  service.py
sema/web/: README.md
tests/: conftest.py  kgap-graphdb.sh  kgap-oxigraph.sh  kgap-store.sh  util4tests.py
tests/bench/: test_bench_cli.py  test_core.py  test_dispatcher.py  test_handler.py  test_shacl_handler.py
tests/check/: test_check_service.py  test_sema_check_cli.py  test_service.py  test_sinks.py
tests/discovery/: test_discovery.py  test_discovery_cli.py  test_link_headers.py  test_lod_html_parser.py  test_url_to_graph.py
tests/harvest/: test_config_build.py  test_executor.py  test_harvest_cli.py  test_harvest_main.py  test_load.py  test_main.py  test_scenarios.py  test_service.py
tests/input/: issue-bnodes.jsonld  issue-bnodes.ttl  (+3 more)
(+289 files in other folders)
